[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyparser-for-notion"
version = "0.1.1"
description = "A Python parser for Notion database exports and API responses"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "KernAttila", email = "your.email@example.com"}
]
keywords = ["notion", "parser", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.urls]
Repository = "https://github.com/KernAttila/pyparser-for-notion"
Issues = "https://github.com/KernAttila/pyparser-for-notion/issues"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pyparser_for_notion --cov-report=term-only"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false